<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LearnTogether_Mobile</string>
    <string name="request_error">Request error</string>
    <string name="error">"Error: "</string>
    <string name="deleted">Deleted</string>
    <string name="marked_as_solved">Marked as solved</string>
    <string name="open_file">Open file</string>
    <string name="at_">"At "</string>
    <string name="_in_">" in "</string>
    <string name="voted">"Voted: "</string>
    <string name="success">Success!</string>
    <string name="published">Published</string>
    <string name="deadline_">"Deadline: "</string>
    <string name="access_to_your_gallery_denied">Access to your gallery denied</string>
    <string name="empty_fields">Empty fields!</string>
    <string name="select_date_of_meeting">Select date of meeting</string>
    <string name="select_meeting_date">Select meeting date</string>
    <string name="select_deadline_date">Select deadline date</string>
    <string name="select_deadline_time">Select deadline time</string>
    <string name="divide_with">Divide with \";\"\n</string>
    <string name="no_enough_items">No enough items!</string>
    <string name="select_news_type">Select news type</string>
    <string name="no_files_selected">No files selected!</string>
    <string name="successfully_changed">Successfully changed</string>
    <string name="cannot_edit_yourself_changes_will_not_be_saved">Cannot edit yourself! Changes will not be saved!</string>
    <string name="too_short_message">Too short message!</string>
    <string name="select_picture">Select Picture</string>
    <string name="the_new_group_added_to_list">The new group added to list</string>
    <string name="password_not_confirmed">Password not confirmed</string>
    <string name="no_role_selected">No role selected!</string>
    <string name="too_short_invite_code">Too short invite code</string>
    <string name="cancel">Cancel</string>
    <string name="send_complaint_to_admins">Send complaint to admins</string>
    <string name="complaint_for_user">"Complaint for user: "</string>
    <string name="title_activity_act_help">ActHelp</string>
    <string name="large_text_help">"Chapters:\n1.  About\n2.  Login and register\n3.  Users and groups\n4.  News\n5.  Files (information)\n6.  Meetings\n7.  Forum (discuss)\n8.  Comments\n9.  Profiles\n10. Admin panel\n\n1. About:\n\nLearn Together is something like private forum for students. Here information cannot become lost in informational noise.\n\nYou can make your own server and use tha same client as for the other servers.\n\n2. Login and register\n\nTo register you need to have a special token and to know IP of server. Then you can use this data to make account. Token can be made up by admin or owner of server.\n\nIf you already have an account use your login and password for target server.\n\n3. Users and groups\n\nTo create new group you need to use server console. If your role is allowed to do it, you can make your own register tokens (invite-codes) for group.\n\nTo join group by invite-code click plus-button in list of your groups, to invite somebody use the same button in users list.\n\nYou see publications from one group only. To switch groups just click at them. \n\n4. News\n\nThere are three types of news:\n- Usual news have some images in it. You can click on image to watch the image closer.\n- Tasks are connected to task manager. They have deadline.\n- Votes have some options (and a little bit buggy), this is a good way to make collective desicions.\n\nYou can rate publications and see average value in a blue bar below. \n\n5. Files (information)\n\nYou can share with different files (but not too big). Download file, give your mark and enjoy new material. The file is saved to uploads.\n\nLoading files to server is available for moderators only.\n\n6. Meetings\n\nHere you can see who can join meeting and when. Gant diagram is very useful. If you have problems with making mass meetings (online or not), use this option.\n\nCreating meetings is available for moderators only.\n\n7. Forum (discuss)\n\nHere you can ask your questions and mark solved if the question is solved. These items have comments option only, use it instead of chats.\n\n8. Comments\n\nYou can write comments by pressing comments icon (right-down corner of publication). Also you can make attachment with one image and list of links.\n\n9.  Profiles\n\nMake your own profile! This is not difficult, but will make you look better in this application. Also some users (default is for Owner role) can edit profile of group. To watch profile of other user just click at user's icon\n\n10. Admin panel\n\nYou can see complaints there and edit roles (if you are allowed to do this). \nTo make user to have more or lesser permissions just click on profile icon and go to editing screen.\nSometimes ban is a good solution.\n\nEnjoy using this app!\n\n    "</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="notification_service">Notification Service</string>
    <string name="if_you_see_this_text_notification_channel_is_open_and_if_something_new_appears_you_can_see_it">If you see this text, notification channel is open and if something new appears you can see it</string>
    <string name="error_you_are_unregistered">Error: you are unregistered</string>
    <string name="notification_service_channel">Notification Service Channel</string>
    <string name="delete_files">Delete files</string>
    <string name="choose_files">Choose files</string>
    <string name="if_you_are_not_moderator_publication_won_t_be_allowed">If you are not moderator, publication won\'t be allowed</string>
    <string name="create_meeting">Create meeting</string>
    <string name="when_date">When date</string>
    <string name="where_place_of_meeting">Where (place of meeting)</string>
    <string name="news_type">News type</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="if_you_are_not_moderator_news_will_become_visible_only_after_moderator_checking">If you are not moderator, news will become visible only after moderator checking</string>
    <string name="select_type_of_publication">Select type of publication</string>
    <string name="title_header">Title (header)</string>
    <string name="description_main_text">Description (main text)</string>
    <string name="deadline_for_this_task">Deadline for this task</string>
    <string name="deadline_date">Deadline date</string>
    <string name="deadline_time">Deadline time</string>
    <string name="select_deadline">Select deadline</string>
    <string name="add_image">Add image</string>
    <string name="delete_image">Delete image</string>
    <string name="vote_options">Vote options</string>
    <string name="divide_with_quot_quot">Divide with \" ; \"</string>
    <string name="anonymous_voting">Anonymous voting</string>
    <string name="multi_answer">Multi-Answer</string>
    <string name="tags_divide_with_comma">Tags (divide with comma)</string>
    <string name="return_">Return</string>
    <string name="manage_roles">Manage roles</string>
    <string name="complaints_list_sender_suspected">Complaints list (sender)-(suspected):</string>
    <string name="comments">Comments</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="send_this_comment">Send this comment</string>
    <string name="set_attachment">Set attachment</string>
    <string name="comment_can_t_be_empty_print_something_here">Comment can\'t be empty! Print something here</string>
    <string name="displayed_name">Displayed name:</string>
    <string name="your_profile">Your profile</string>
    <string name="about_me">About me:</string>
    <string name="back">Back</string>
    <string name="name_can_t_be_empty">Name can\'t be empty!</string>
    <string name="save_changes">Save changes</string>
    <string name="user_editing">User editing</string>
    <string name="username">Username</string>
    <string name="user_role">User role:</string>
    <string name="remove_user_from_current_group">Remove user from current group</string>
    <string name="ban_on_this_server">BAN on this server</string>
    <string name="question_title">Question title</string>
    <string name="text_please_be_brief">Text (please, be brief)</string>
    <string name="tags_list_separate_with_quot_quot_zapyataya">Tags list (separate with \" , \" )</string>
    <string name="create_ask">Create ask</string>
    <string name="join_new_group">Join new group</string>
    <string name="invite_token">Invite token</string>
    <string name="address_of_server">Address of server</string>
    <string name="default_ip" translatable="false">192.168.3.73:8000</string>
    <string name="enter_to_system">Enter to system</string>
    <string name="password">Password</string>
    <string name="forgot_password_or_login">Forgot password or login?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="i_can_join_from">I can join from:</string>
    <string name="i_can_join_until">I can join until:</string>
    <string name="i_m_sure_in">I\'m sure in %</string>
    <string name="update_join_status">Update join status</string>
    <string name="showing_time_and_usernames">Showing time and usernames</string>
    <string name="hiding_time_and_usernames">Hiding time and usernames</string>
    <string name="joined_people">Joined people:</string>
    <string name="refused">Refused:</string>
    <string name="profile">Profile</string>
    <string name="tasks">Tasks</string>
    <string name="print_here_to_search">Print here to search</string>
    <string name="registration">Registration</string>
    <string name="title_displayed_name">Title (displayed name)</string>
    <string name="recovery_contact_mail_phone">Recovery contact (mail/phone)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_token_from_admin">Register token (from admin)</string>
    <string name="insert_new_register_token">Insert new register token</string>
    <string name="unique_invite_code">Unique invite code</string>
    <string name="select_role">Select role</string>
    <string name="your_task_status">Your task status:</string>
    <string name="deadline">Deadline:</string>
    <string name="need_help">Need help</string>
    <string name="finished">Finished</string>
    <string name="priority">Priority:</string>
    <string name="update_status">Update status</string>
    <string name="delete_status">Delete status</string>
    <string name="others_statuses">Others\' statuses</string>
    <string name="all_your_tasks">All your tasks</string>
    <string name="complaint">Complaint</string>
    <string name="clear_attachment">Clear Attachment</string>
    <string name="select_image">Select Image</string>
    <string name="enter_link_url">Enter Link URL</string>
    <string name="add_link">Add Link</string>
    <string name="need_help_exclamation">Need help!</string>
    <string name="delete_chosen_role">Delete chosen role</string>
    <string name="save_as_new_role">Save as new role</string>
    <string name="admin_level_in_hieararchy_0_127">Admin level in hieararchy (0-127)</string>
    <string name="moderate_publications">Moderate publications</string>
    <string name="offer_publications">Offer publications</string>
    <string name="edit_roles">Edit roles</string>
    <string name="forum_allowed">Forum allowed</string>
    <string name="edit_group">Edit group</string>
    <string name="comments_allowed">Comments allowed</string>
    <string name="moderate_comments">Moderate comments</string>
    <string name="invite_into_group">Invite into group</string>
    <string name="ban_accounts">Ban accounts</string>
    <string name="is_admin">Is Admin</string>
    <string name="role_name">Role name</string>
</resources>