<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WatchMoreActivity.ActTaskStatus"
    android:background="@color/black2"
    android:orientation="vertical"
    android:padding="15sp">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_task_status"
        android:textColor="@color/white"
        android:textSize="34sp"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="100sp"
        android:scrollbarTrackVertical="@android:drawable/alert_dark_frame"
        android:scrollbars="vertical"
        android:text="Descr"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:verticalScrollbarPosition="right" />

    <TextView
        android:id="@+id/tvDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/deadline"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbNeedHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_help"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cbFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:text="@string/finished"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <SeekBar
        android:id="@+id/sbPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:min="0"
        android:progress="20"
        android:progressBackgroundTint="@color/white"
        android:thumb="@android:drawable/ic_dialog_alert" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdateTaskStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/update_status"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:icon="@drawable/profile_2user" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnDeleteTaskStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/delete_status"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnShowForThis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/others_statuses"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAllYourTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/all_your_tasks"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>