<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="10sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black2"
                android:text="@string/clear_attachment"
                android:textSize="16sp"
                app:icon="@android:drawable/ic_dialog_alert" />

            <Button
                android:id="@+id/btnAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black2"
                android:text="@string/select_image"
                android:textSize="16sp"
                app:icon="@android:drawable/gallery_thumb" />

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_link_url"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAddLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black2"
                android:text="@string/add_link"
                android:textSize="16sp"
                app:icon="@android:drawable/ic_dialog_email" />

            <TextView
                android:id="@+id/textViewLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all|web|phone|none|map|email"
                android:linksClickable="true"
                android:textColor="@color/black"
                android:textColorLink="@color/red"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
