<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.InsertRequestsActivity.ActAddNews"
    android:background="@color/black2">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="116dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.widget.Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/outlined_blue_button"
                android:text="@string/save_and_exit"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDeleteImage" />

            <EditText
                android:id="@+id/etHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/title_header"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/description_main_text"
                android:inputType="text|textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/red"
                app:layout_constraintEnd_toEndOf="@+id/etHeader"
                app:layout_constraintStart_toStartOf="@+id/etHeader"
                app:layout_constraintTop_toBottomOf="@+id/etHeader" />

            <Button
                android:id="@+id/btnDeleteImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue"
                android:text="@string/delete_files"
                android:textSize="16sp"
                app:icon="@android:drawable/ic_menu_delete"
                app:layout_constraintStart_toStartOf="@+id/btnAddImage"
                app:layout_constraintTop_toBottomOf="@+id/btnAddImage" />

            <Button
                android:id="@+id/btnAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/blue"
                android:text="@string/choose_files"
                android:textSize="16sp"
                app:icon="@drawable/folder"
                app:layout_constraintStart_toStartOf="@+id/tvFilenames"
                app:layout_constraintTop_toBottomOf="@+id/etTaglist" />

            <TextView
                android:id="@+id/tvFilenames"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" />

            <EditText
                android:id="@+id/etTaglist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/tags_divide_with_comma"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/red"
                app:layout_constraintEnd_toEndOf="@+id/etHeader"
                app:layout_constraintStart_toStartOf="@+id/etHeader"
                app:layout_constraintTop_toTopOf="@+id/tvFilenames" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/btnSave"
                app:layout_constraintStart_toStartOf="@+id/btnSave"
                app:layout_constraintTop_toBottomOf="@+id/btnSave" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>