<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:indeterminateBehavior="repeat"
        android:indeterminateDrawable="@color/white"
        android:max="100"
        android:progress="70"
        android:progressTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tvProirity"
        app:layout_constraintEnd_toStartOf="@+id/tvNeedHelp"
        app:layout_constraintStart_toEndOf="@+id/tvProirity"
        app:layout_constraintTop_toTopOf="@+id/tvProirity" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Username"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTaskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Task title"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:linksClickable="true"
        android:text="TaskDescription"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/tvTaskTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTaskTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle" />

    <TextView
        android:id="@+id/tvDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/deadline"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProirity" />

    <TextView
        android:id="@+id/tvProirity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/priority"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskDescription" />

    <TextView
        android:id="@+id/tvNeedHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/need_help_exclamation"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>